# API-Orthodox-Church-website

./: .gitignore  Makefile  pyproject.toml  readme.md
backend/: Makefile
backend/blog/: handlers.py  models.py  urls.py  views.py
backend/blog/migrations/: 0001_initial.py  0002_alter_post_cover.py
backend/clergy/: admin.py  handlers.py  models.py  serializers.py  urls.py  views.py
backend/clergy/migrations/: 0001_initial.py  0002_alter_cleric_slug.py  0003_alter_cleric_photo.py  0004_alter_cleric_photo.py  0005_cleric_created_at_cleric_updated_at.py
backend/contact/: handlers.py  models.py  urls.py  views.py
backend/contact/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py
backend/core/settings/: .dev.env  base.py  local.py  prod.py
backend/donation/: handlers.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/donation/migrations/: 0001_initial.py  0002_alter_donation_correspondent_account_and_more.py  0003_alter_donation_bic_alter_donation_inn_and_more.py  0004_alter_donation_bic_and_more.py
backend/gallery/: admin.py  handlers.py  models.py  serializers.py  urls.py  views.py
backend/gallery/migrations/: 0001_initial.py  0002_alter_galleryalbumimage_image_height_and_more.py  0003_galleryalbumimage_created_at_and_more.py  0004_alter_galleryalbum_options_galleryalbum_created_at_and_more.py  0005_galleryalbumimage_album.py  0006_rename_image_height_galleryalbumimage_height_and_more.py  0007_alter_galleryalbum_options.py  (+7 more)
backend/schedule/: handlers.py  models.py  serializers.py  urls.py  views.py
(+2 files in other folders)
